# alerting-service

./: .gitignore  Cargo.toml  LICENCE  README.md
api/proto/: alerting.proto
config/: app_config.rs  kafka_config.rs  notifier_plugins.rs  smtp_config.rs  tls_config.rs
scripts/: replay_alerts.sh  simulate_alert.sh
src/: main.rs
src/adapter/grpc/: grpc_server.rs
src/adapter/http/: controller.rs  middleware.rs  routes.rs
src/adapter/kafka/: kafka_consumer.rs  kafka_producer.rs
src/adapter/notifier/: email_notifier.rs  notifier_registry.rs  sms_notifier.rs  telegram_notifier.rs  webpush_notifier.rs
src/adapter/webhook/: webhook_handler.rs
src/domain/: error.rs
src/domain/model/: alert.rs  delivery_status.rs  severity.rs  tenant.rs
src/repository/: alert_store.rs  retry_queue.rs  rule_store.rs
src/resource/: application.yml  kafka-config.yml  notifier-config.yml  smtp-config.yml
src/scheduler/: purge_scheduler.rs  retry_scheduler.rs
src/service/: alert_classifier.rs  audit_logger.rs  event_deduplicator.rs  notification_dispatcher.rs  plugin_loader.rs  routing_engine.rs
src/telemetry/: metrics.rs  opentelemetry_setup.rs  tracing.rs
src/usecase/: classify_alert_severity.rs  dispatch_notification.rs  expose_alerts_api.rs  generate_alert_insights.rs  log_alert_audit.rs  purge_old_alerts.rs  receive_and_validate_event.rs  register_notification_rules.rs  replay_alerts.rs  retry_failed_deliveries.rs  route_event.rs  simulate_alert.rs  trigger_support_ticket.rs  update_notifier_plugins.rs  verify_alert_origin.rs
tests/integration/: kafka_ingestion_test.rs  notify_flow_test.rs  simulate_alert_test.rs
tests/unit/: alert_classifier_test.rs  retry_logic_test.rs  rule_store_test.rs
